WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185422
Don't use mapped cache files in case of Class A/B protected app
https://bugs.webkit.org/show_bug.cgi?id=185422
Summary
Don't use mapped cache files in case of Class A/B protected app
Antti Koivisto
Reported
2018-05-08 07:14:59 PDT
Currently we don't use shared memory maps in these cases. This still leaves us open for crashes in the network process.
Attachments
patch
(9.67 KB, patch)
2018-05-08 07:33 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2018-05-08 07:15:18 PDT
<
rdar://problem/34001688
>
Antti Koivisto
Comment 2
2018-05-08 07:33:13 PDT
Created
attachment 339820
[details]
patch
WebKit Commit Bot
Comment 3
2018-05-08 09:15:25 PDT
Comment on
attachment 339820
[details]
patch Clearing flags on attachment: 339820 Committed
r231484
: <
https://trac.webkit.org/changeset/231484
>
WebKit Commit Bot
Comment 4
2018-05-08 09:15:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug