Source/WebKit/NetworkProcess/cache/NetworkCache.h
@@ -128,7 +128,6 @@ public:
     void dumpContentsToFile();
 
     String recordsPath() const;
-    bool canUseSharedMemoryForBodyData() const { return m_storage->canUseSharedMemoryForBodyData(); }
 
 #if ENABLE(NETWORK_CACHE_SPECULATIVE_REVALIDATION)
     SpeculativeLoadManager* speculativeLoadManager() { return m_speculativeLoadManager.get(); }
