Source/WebKit/NetworkProcess/cache/NetworkCacheFileSystem.h
@@ -42,7 +42,7 @@ struct FileTimes {
 FileTimes fileTimes(const String& path);
 void updateFileModificationTimeIfNeeded(const String& path);
 
-bool canUseSharedMemoryForPath(const String& path);
+bool isSafeToUseMemoryMapForPath(const String& path);
 
 }
 }
